# Afterglow

./: .dockerignore  .env.docker.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  VERSION  compose.yaml
.github/: FUNDING.yml
backend/: .env.example  README.md  pyproject.toml
backend/scripts/: analyze_persona.py  eval_retrieval.py  import_history.py
backend/web_ui_src/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
backend/web_ui_src/src/: App.vue  api.ts  styles.css
backend/xuwen/: __init__.py  config.py
backend/xuwen/chat_api/: __init__.py  app.py  chat_pipeline.py  companion_prompt.py  document.py  image_store.py  llm_client.py  middleware.py  output_filter.py  responses_store.py  schedule_extractor.py  schemas.py  state.py  sticker_store.py  turn_coordinator.py  vision_client.py  web_fetch.py  web_search.py
backend/xuwen/chat_api/routes/: chat.py  companion.py  debug.py  documents.py  health.py  images.py  memory.py  responses.py  stickers.py
backend/xuwen/companion/: __init__.py  life.py  relationship.py  response_policy.py
backend/xuwen/core/: errors.py  metrics.py  models.py  time.py  update_check.py
backend/xuwen/ingestion/: __init__.py  adaptive_chunker.py  chunker.py  cleaner.py  cli.py  embedder.py  importer.py  parser.py  splitter.py
backend/xuwen/ingestion/plugins/: __init__.py  qqexporter_v5.py  wechat_weflow.py
backend/xuwen/memory/: __init__.py  cross_reranker.py  policy.py  reranker.py  retriever.py  schema.py  store.py  writer.py
backend/xuwen/persona/: __init__.py  analyzer.py  card.py  circadian.py  labeler.py  labeling.py  pii_rules.py  prompt.py  style_profile.py
backend/xuwen/persona/templates/: colleague.md.j2  family.md.j2  friend.md.j2  lover.md.j2  xuwen.md.j2
backend/xuwen/web_ui/: STATIC_README.md  __init__.py  __main__.py  app.py  connectivity.py  env_io.py  first_run.py  import_tasks.py  inspect_file.py  presets.py  routes.py  schema.py
backend/xuwen/web_ui/static/: index.html
backend/xuwen/web_ui/static/assets/: index-B9aEhOWr.css  index-C0jVZBPL.css  index-CLch14LQ.css  index-Cmogc0bD.js  index-DMQ-5X6N.js  index-DmuU4qgY.js  index-bg0m1bu2.js
(+51 files in other folders)
